oauthLoginForm.html - accessToken을 cookie가 아닌 http request header로 관리 하기 위한 script code 추가 (수정중)

--- a/src/main/resources/templates/oauthLoginForm.html
+++ b/src/main/resources/templates/oauthLoginForm.html
@@ -43,6 +43,22 @@
             </div>
         </section>
     </div>
-
 </body>
+<script>
+    fetch('/login/success', {
+        method: 'GET',
+        headers: {
+            'Content-Type': 'application/json'
+        }
+    })
+        .then(response => response.json())
+        .then(data => {
+            const accessToken = data.accessToken;
+
+            console.log("accessToken : ", accessToken);
+        })
+        .catch(error => {
+            console.error("Error : ", error);
+        })
+</script>
 </html>
